--- a/index.html
+++ b/index.html
@@ -11,7 +11,8 @@
 
     <!-- header -->
      <header>
-
+        <img src="./img/jinx-pfp.png" alt="jinx profile picture">
+        <h1>Jinx</h1>
 
      </header>
 
@@ -24,7 +25,7 @@
     <!-- footer -->
      <footer>
 
-        
+
      </footer>
 
 
