Added header background image
Added Header background image, using hero class on css file and linking it in index.html

--- a/index.html
+++ b/index.html
@@ -3,14 +3,14 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Jinx</title>
+    <title>Jinx | Arcane</title>
     <link rel="icon" href="./img/jinx-icon.png">
     <link rel="stylesheet" href="./css/styles.css">
 </head>
 <body>
 
     <!-- header -->
-     <header>
+     <header class="hero">
         <img src="./img/jinx-pfp.png" alt="jinx profile picture">
         <h1>Jinx</h1>
 
