changed pfp from img to div in html

--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 
     <!-- header -->
      <header class="hero">
-        <img src="./img/jinx-pfp.png" alt="jinx profile picture">
+        ,<div class="pfp"></div>
         <h1>Jinx</h1>
 
      </header>
