now using images in css

--- a/index.html
+++ b/index.html
@@ -10,8 +10,8 @@
 <body>
 
     <!-- header -->
-     <header class="hero">
-        ,<div class="pfp"></div>
+     <header>
+        <div class="pfp"></div>
         <h1>Jinx</h1>
 
      </header>
