Added header background image

--- a/index.html
+++ b/index.html
@@ -10,7 +10,8 @@
 <body>
 
     <!-- header -->
-     <header>
+     <header class="hero">
+        <div ></div>
         <div class="pfp"></div>
         <h1>Jinx</h1>
 
