Added footer element

--- a/index.html
+++ b/index.html
@@ -48,8 +48,9 @@
     
     <!-- footer -->
      <footer>
-
-
+        <div class="content">
+            <p>Jinx Fan Page | Made by <a href="https://x.com/nelson_xbt" target="blank">NelsonXBT</a> during his HTML learning journey | All rights reserved © 2025.</p>
+        </div>
      </footer>
 
 
