Added another page for silco

--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
     <!-- Main -->
      <main>
         <h2>About JINX</h2>
-        <p>Jinx is one of the most iconic and unpredictable characters from Arcane, the hit animated series set in the League of Legends universe.
+        <p><strong>Jinx</strong> is one of the most iconic and unpredictable characters from Arcane, the hit animated series set in the League of Legends universe.
 
             Once a sweet and shy girl named Powder, she grew up in the undercity of Zaun alongside her older sister, Vi. But everything changed after a tragic mission went wrong — her invention backfired, lives were lost, and Vi vanished. That heartbreak shattered her innocence and sparked the birth of someone new… Jinx.
             
@@ -29,17 +29,17 @@
             <p class="caption">Jinx - The loose Cannon</p>
             <h2>Jinx Characteristics</h2>
             <ol>
-                <li>Unpredictable: Her erratic behavior makes her both dangerous and hard to read. She's impulsive, chaotic, and thrives in destruction.</li>
-                <li>Emotionally Damaged: Haunted by childhood trauma, she suffers from deep emotional instability, hallucinations, and inner conflict.</li>
-                <li>Intelligent: Jinx is a brilliant inventor and weapons expert, capable of designing complex gadgets and explosives.</li>
-                <li>Creative: She uses graffiti, colors, and personal symbols to express her inner world — blending art with chaos.</li>
-                <li>Violent yet Playful: She often mixes childlike joy with brutal violence, laughing wildly even in combat.</li>
-                <li>Insecure: Beneath her loud and reckless personality, Jinx craves validation and struggles with feeling abandoned and unloved.</li>
+                <li><strong>Unpredictable:</strong> Her erratic behavior makes her both dangerous and hard to read. She's impulsive, chaotic, and thrives in destruction.</li>
+                <li><strong>Emotionally Damaged:</strong> Haunted by childhood trauma, she suffers from deep emotional instability, hallucinations, and inner conflict.</li>
+                <li><strong>Intelligent:</strong> Jinx is a brilliant inventor and weapons expert, capable of designing complex gadgets and explosives.</li>
+                <li><strong>Creative:</strong> She uses graffiti, colors, and personal symbols to express her inner world — blending art with chaos.</li>
+                <li><strong>Violent yet Playful:</strong> She often mixes childlike joy with brutal violence, laughing wildly even in combat.</li>
+                <li><strong>Insecure:</strong> Beneath her loud and reckless personality, Jinx craves validation and struggles with feeling abandoned and unloved.</li>
             </ol>
             <h2>Jinx Friends</h2>
             <ul>
                 <li><a href="https://arcane.fandom.com/wiki/Vi" target="_blank"> Vi (Sister)</a></li>
-                <li><a href="https://arcane.fandom.com/wiki/Silco" target="_blank">Silco (Father Figure / Mentor)</a></li>
+                <li><a href="./Silco.html" target="_blank">Silco (Father Figure / Mentor)</a></li>
                 <li><a href="https://arcane.fandom.com/wiki/Ekko" target="_blank">Ekko (Childhood Friend)</a></li>
                 <li><a href="https://arcane.fandom.com/wiki/Sevika" target="_blank">Sevika</a></li>
             </ul>
